--- a/src/index.html
+++ b/src/index.html
@@ -4,19 +4,19 @@
 <head>
   <meta charset="utf-8">
   <meta name="Description" content="Author: Owen Kelvin,
-    Company: Furaha Capital, Category: Education, Purpose: School Management System">
+    Company: Furaha Solutions Technologies, Category: Education, Purpose: School Management System">
   <title>FurahaSms</title>
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
   <link rel="manifest" href="manifest.webmanifest">
   <meta name="theme-color" content="#1976d2">
-  <link rel="canonical" href="http://localhost:5555/"/>
+  <link rel="canonical" href="https://fs-furahasms-frontend.herokuapp.com/"/>
   <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png">
   <script>
-    var global = global || window;
-    var Buffer = Buffer || [];
-    var process = process || {
+    const global = global || window;
+    const Buffer = Buffer || [];
+    const process = process || {
       env: { DEBUG: undefined },
       version: []
     };
