--- a/src/index.html
+++ b/src/index.html
@@ -14,9 +14,9 @@
   <link rel="canonical" href="https://fs-furahasms-frontend.herokuapp.com/"/>
   <link rel="apple-touch-icon" sizes="180x180" href="images/icons/apple-touch-icon-180x180.png">
   <script>
-    const global = global || window;
-    const Buffer = Buffer || [];
-    const process = process || {
+    var global = global || window;
+    var Buffer = Buffer || [];
+    var process = process || {
       env: { DEBUG: undefined },
       version: []
     };
